# streamlit-test

./: LICENSE  README.md  pyproject.toml  test1.py
streamlit_test/: __init__.py  __main__.py  cli.py  version.py
